welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var place:Int=0
  var cpt66:Int=0
  var cpt67:Int=0
  while ((nums.length-place-1 0){
    if (nums(place)==6 && nums(place+1)==6){
      return true
    }else{
      if (ums(place)==6 && nums(place+1)==6){
      return true
      place=place+1
    }
  }
  return false
  
def array123(nums:Array[Int]): Boolean = {
  var place:Int=0
	while ((nums.length-place-2) > 0){
    if (nums(place)==1 && nums(place+1)==2 && nums(place+2)==3){
      return true
    }else{
      place=place+1
    }
  }
  return false
}